--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,37 @@
+.main {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+}
+
+
 .raceTrack {
 	height: 5vh;
 	width: 100%;
 	background-color: black;
+	margin-top: 50px;
+	display: flex;
+	justify-content: center;
 }
+
+#track1 {
+	margin-top: 10rem;
+}
+
+#racer1 {
+	height: 6vh;
+	width: 6vw;
+	background-color: red;
+	margin: -3px auto auto 0;
+}
+
+#racer2 {
+	height: 6vh;
+	width: 6vw;
+	background-color: blue;
+	margin: -3px auto auto 0;
+}
+
