--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	/*justify-content: center;*/
 
 }
 
@@ -14,7 +14,7 @@
 	background-color: black;
 	margin-top: 50px;
 	display: flex;
-	justify-content: center;
+	/*justify-content: center;*/
 }
 
 #track1 {
